add content to terms and conditions

--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -5,49 +5,59 @@
 	<title>Terms & Conditions</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TRJXNR2');</script>
+	<script>(function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TRJXNR2');</script>
 	<!-- End Google Tag Manager -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Lora:400,400i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
-				rel="stylesheet">
+		  rel="stylesheet">
 	<link href="css/libs.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css"
-				rel="stylesheet"/>
+		  rel="stylesheet"/>
 	<script
-				src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
+			src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 	<link rel="stylesheet" type="text/css"
-				href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"/>
+		  href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"/>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
 	<script>
-    window.addEventListener('load', function () {
-      window.cookieconsent.initialise({
-        'palette': {
-          'popup': {
-            'background': '#212442'
+      window.addEventListener('load', function () {
+        window.cookieconsent.initialise({
+          'palette': {
+            'popup': {
+              'background': '#212442'
+            },
+            'button': {
+              'background': '#5140ff'
+            }
           },
-          'button': {
-            'background': '#5140ff'
-          }
-        },
-        'theme': 'edgeless',
-        'position': 'bottom-right',
-        'type': 'opt-out'
+          'theme': 'edgeless',
+          'position': 'bottom-right',
+          'type': 'opt-out'
+        });
       });
-    });
 	</script>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TRJXNR2"
-				  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+	<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TRJXNR2"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!--register modal-->
 <div class="modal fade theme-modal register-modal" id="registerModal" tabindex="-1"
-		 role="dialog" aria-hidden="true">
+	 role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -74,7 +84,7 @@
 
 <!--download modal-->
 <div class="modal fade theme-modal download-modal" id="downloadModal" tabindex="-1"
-		 role="dialog" aria-hidden="true">
+	 role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -94,7 +104,7 @@
 
 <!--check modal-->
 <div class="modal fade theme-modal check-modal" id="checkModal" tabindex="-1"
-		 role="dialog" aria-hidden="true">
+	 role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -121,7 +131,7 @@
 				<div class="main-navigation-container">
 					<div class="inner-wrap">
 						<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
-									class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
+								class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
 						<ul class="main-nav">
 							<li><a href="#stoSection" class="main-nav-link">STO</a></li>
 							<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
@@ -130,7 +140,7 @@
 							<li><a href="#footer" class="main-nav-link">Social</a></li>
 						</ul>
 						<a href="#" class="btn primary-theme-btn show-whitelist-modal" data-toggle="modal"
-							 data-target="#whitelistModal">Get
+						   data-target="#whitelistModal">Get
 							whitelisted</a>
 					</div>
 				</div>
@@ -143,7 +153,187 @@
 	</div>
 </header>
 <div class="main-content">
+	<div class="page">
+		<div class="container">
+			<h1 class="page-title">Terms & Conditions</h1>
+			<p class="page-descr">Teilnahme - und Nutzungsbedingungen für das Whitelisting-Verfahren des Bitwala
+				STOs.</p>
+			<div class="page-content">
+				<h4>1. Geltungsbereich</h4>
 
+
+				<p>Diese allgemeinen Teilnahme- und Nutzungsbedingungen gelten für Deine Teilnahme und Nutzung des
+					Whitelisting-Verfahrens der Bitwala GmbH mit Sitz in Berlin, Geschäftsanschrift: Ohlauer Str. 43,
+					10999 Berlin, eingetragen im Handelsregister des Amtsgerichts Charlottenburg unter HRB 173698 (im
+					Folgenden „Bitwala“, „wir“ oder „unser“ genannt).<br>
+					Das Whitelisting-Verfahren wird von Bitwala ausschließlich auf der von Bitwala betriebenen Website
+					https://bitwalatoken.com (im Folgenden „Website“ genannt).<br>
+					Mit der Teilnahme am Whitelisting-Verfahren erkennst Du die folgenden allgemeinen Teilnahme- und
+					Nutzungsbedingungen an.</p>
+
+
+				<h4>2. Gegenstand, Voraussetzungen und Vorteile des Whitelisting-Verfahrens</h4>
+
+
+				<p>Mit der Teilnahme am Whitelisting-Verfahren bekommst Du die Möglichkeit, Dir einen Spot in unserem
+					geplanten Security Token Offering (im Folgenden „Bitwala STO“ genannt) zu sichern und Dir Token
+					vorab und unverbindlich zu reservieren. Nach dem Ende der Whitelistingphase wirst Du Token im Rahmen
+					des Public Sales unseres Bitwala STOs erwerben können. Teilnehmer des Whitelisting-Verfahrens werden
+					wir per E-Mail über den Beginn unseres Bitwala STOs informieren und zur Registrierung für die
+					Teilnahme am Public Sale einladen. Dein Whitelisting und die Reservierung von Token stellen weder
+					von Deiner Seite noch von unserer Seite ein verbindliches Angebot auf Abschluss eines Vertrags über
+					den Erwerb von Token dar.<br>
+					Zur Teilnahme am Whitelisting-Verfahren gibst Du Deinen Vornamen, Deinen Nachnamen, Deine
+					E-Mail-Adresse und Deine Nationalität über die Eingabemaske auf der Website ein. Zudem wählst Du
+					aus, ob du Token im Wert von weniger als EUR 100.000 (€100k<) oder im Wert von EUR 100.000 oder mehr
+					(≥€100k) reservieren möchtest. Wir schicken Dir dann eine automatisch generierte E-Mail mit einem
+					Verifizierungs-Link an die von Dir angegebene E-Mail-Adresse. Mit Klick auf den Verifizierungs-Link
+					schließt Du das Whitelisting ab.<br>
+					Wir möchten Dich darauf hinweisen, dass wir für Teilnehmer, die Token im Wert von mindestens EUR
+					100.000 erwerben möchten, unseren Private Sale vorgesehen haben, der vor dem Public Sale stattfinden
+					wird. Wenn Du im Whitelisting-Verfahren angibst, dass Du Dir Token im Wert von mindestens EUR
+					100.000 reservieren möchtest, kontaktieren wir Dich per E-Mail persönlich.
+					Nach erfolgreichem Abschluss des Whitelistings hast Du die Möglichkeit über die Website einen
+					Referral Link abzurufen. Den Referral Link kannst Du in sozialen Medien, per E-Mail, Kurznachricht
+					oder auf anderem Weg mit Deinen Freunden teilen, um sie auf unseren geplanten Bitwala STO und unser
+					Whitelisting-Verfahren hinzuweisen.<br>
+					Die Teilnahme am Whitelisting-Verfahren ist freiwillig und kostenlos und nicht vom Erwerb einer Ware
+					oder der Inanspruchnahme einer Dienstleistung abhängig. Du trägst nur die Kosten, die mit der
+					Teilnahme über das Internet (Nutzungsentgelt für die Internetverbindung) verbunden sind. Dies gilt
+					sowohl für nicht mobile als auch für mobile Endgeräte.<br>
+					Falls Du Dich für das Whitelisting-Verfahren registriert hast, später aber nicht mehr teilnehmen
+					möchtest, kannst Du Dich jederzeit durch Betätigung des “Unsubscribe Links” in der Bestätigungs-Mail
+					über Dein Whitelisting vom Whitelisting-Verfahren abmelden.</p>
+
+
+				<h4>3. Anmeldung zu Bitwala Updates (Newsletter)</h4>
+
+
+				<p>Im Rahmen der Registrierung für das Whitelisting-Verfahren hast Du die Möglichkeit, Dich für
+					regelmäßige Updates zu unserem zukünftigen Bitwala STO anzumelden. Entscheidest Du Dich hierfür
+					durch Setzen eines Hakens in die dafür vorgesehenen Box, werden wir Dir eine E-Mail zusenden, damit
+					Du Deine Anmeldung zum Newsletter durch das Anklicken eines Links bestätigen kannst. Nach der
+					Bestätigung werden wir Dir regelmäßig Updates an die von Dir angegebene E-Mail-Adresse senden. Die
+					Updates kannst Du jederzeit über den in den Update-Mails befindlichen Unsubscribe-Link oder über die
+					in unserer Datenschutzerklärung angegebenen Kontaktdaten abbestellen.</p>
+
+
+				<h4>4. Ausschluss von der Teilnahme / verbotene Aktivitäten</h4>
+
+
+				<p>4.1. Von der Teilnahme am Whitelisting-Verfahren sind Personen und Unternehmen ausgeschlossen, die in
+					den Vereinigten Staaten von Amerika ansässig sind oder auf die US-amerikanisches oder kanadisches
+					Steuerrecht Anwendung findet.</p>
+
+				<p>Zudem ist ein Whitelisting nicht für Personen oder Unternehmen vorgesehen, die in Staaten ansässig
+					sind, nach deren Rechtsordnung ein späteres öffentliches Angebot von Security Token rechtswidrig
+					wäre.</p>
+
+				<p>Das Gleiche gilt für Länder, die von der Financial Action Task Force (FATF) als Hochrisikoländer für
+					Geldwäsche oder Terrorismusfinanzierung eingestuft wurden oder gegen die ein Embargo oder Sanktionen
+					verhängt wurden, insbesondere von den Vereinigten Staaten von Amerika oder der Europäischen
+					Union.</p>
+
+				<p>4.2. Jegliche Aktivitäten, die gegen geltendes Recht verstoßen, Rechte Dritter verletzen oder gegen
+					die Grundsätze des Jugendschutzes verstoßen, sind untersagt.</p>
+
+				<p>4.3. Ebenfalls untersagt ist jede Handlung, die geeignet ist, den reibungslosen Betrieb der Website
+					zu beeinträchtigen, insbesondere die Systeme von Bitwala übermäßig zu belasten.</p>
+
+				<p>4.4. Sollte Dir als Nutzer eine illegale, missbräuchliche, vertragswidrige oder sonst wie
+					unberechtigte Nutzung der Website bekannt werden, so bitten wir Dich um entsprechende Mitteilung.
+					Wir werden den Vorgang dann prüfen und ggf. angemessene Schritte einleiten.</p>
+
+				<p>4.5. Bei Vorliegen eines Verdachts auf rechtswidrige bzw. strafbare Handlungen ist Bitwala berechtigt
+					und ggf. auch verpflichtet,</p>
+
+				<p>die Aktivitäten des Nutzers zu überprüfen,</p>
+
+				<p>den Nutzer ggf. vom Whitelisting-Verfahren auszuschließen und</p>
+
+				<p>ggf. auch rechtliche Schritte gegen den Nutzer einzuleiten. Hierzu kann auch die Zuleitung eines
+					Sachverhalts an die Staatsanwaltschaft gehören.</p>
+
+
+				<h4>5. Nutzungsrecht an Inhalten der Website</h4>
+
+
+				<p>5.1. Soweit nicht in diesen Teilnahme- und Nutzungsbedingungen ausdrücklich gestattet oder durch eine
+					entsprechende Funktionalität auf der Website/ App ermöglicht,</p>
+
+				<p>darf der Nutzer die auf der Website verfügbaren Inhalte ausschließlich für persönliche Zwecke online
+					abrufen und anzeigen. Dieses Nutzungsrecht ist auf die Dauer der Nutzung der Website/App
+					beschränkt.</p>
+
+				<p>ist es dem Nutzer untersagt, die auf der Website/App verfügbaren Inhalte ganz oder teilweise zu
+					bearbeiten, zu verändern, zu übersetzen, vorzuzeigen oder vorzuführen, zu veröffentlichen,
+					auszustellen, zu vervielfältigen oder zu verbreiten. Ebenso ist es untersagt, Urhebervermerke, Logos
+					und sonstige Kennzeichen oder Schutzvermerke zu entfernen oder zu verändern.</p>
+
+				<p>5.2. Zum Herunterladen von Inhalten („Download“) sowie zum Ausdrucken von Inhalten ist der Nutzer nur
+					berechtigt, soweit eine Möglichkeit zum Download bzw. zum Ausdrucken auf der Website/App als
+					Funktionalität (z.B. mittels eines Download- Buttons) zur Verfügung steht.</p>
+
+
+				<h4>6. Datenschutz</h4>
+
+
+				<p>6.1. Zu unseren Qualitätsansprüchen gehört es, verantwortungsbewusst mit Deinen persönlichen Daten
+					(im Folgenden „personenbezogene Daten“ genannt) umzugehen. Die sich aus der Registrierung
+					(Whitelisting-Verfahren) über die Website bzw. App und sich aus der Nutzung unserer Website/App
+					ergebenden Daten werden von uns daher nur erhoben, gespeichert und verarbeitet, soweit dies zur
+					vertragsgemäßen Leistungserbringung erforderlich und durch gesetzliche Vorschriften erlaubt oder vom
+					Gesetzgeber angeordnet ist. Bitwala wird Deine personenbezogenen Daten vertraulich sowie gemäß den
+					Bestimmungen des geltenden Datenschutzrechts entsprechend behandeln.</p>
+
+				<p>6.2. Hierüber hinaus verwenden wir Deine personenbezogenen Daten nur, soweit Du hierzu ausdrücklich
+					eingewilligt hast. Eine von Dir erteilte Einwilligung kann von Dir jederzeit widerrufen werden.</p>
+
+				<p>6.3. Im Übrigen gelten die Datenschutzbestimmungen von Bitwala, die Du unter
+					https://www.bitwala.com/privacy-policy/ einsehen und abrufen kannst.</p>
+
+
+				<h4>7. Haftung</h4>
+
+
+				<p>7.1. Bitwala haftet nur bei Vorsatz und grober Fahrlässigkeit für solche Schäden, die dem Nutzer
+					durch die Nutzung der Website und App entstehen, sofern der Schaden aufgrund der vertragsgemäßen
+					Nutzung der Website und App entstanden ist. Ferner haftet Bitwala für die fahrlässige Verletzung von
+					Pflichten, deren Erfüllung die ordnungsgemäße Durchführung des Vertrages überhaupt erst ermöglicht,
+					deren Verletzung die Erreichung des Vertragszwecks gefährdet und auf deren Einhaltung der Teilnehmer
+					regelmäßig vertrauen darf. Im letztgenannten Fall haftet Bitwala jedoch nur für den vorhersehbaren,
+					vertragstypischen Schaden. Bitwala haftet nicht für die leicht fahrlässige Verletzung anderer als
+					der in den vorstehenden Sätzen genannten Pflichten und Schäden.</p>
+
+				<p>Die vorstehenden Haftungsausschlüsse gelten nicht bei Verletzung von Leben, Körper und
+					Gesundheit.</p>
+
+				<p>7.2. Die Datenkommunikation über das Internet kann nach dem derzeitigen Stand der Technik nicht
+					fehlerfrei und/oder jederzeit verfügbar gewährleistet werden. Bitwala haftet insoweit nicht für die
+					ständige und ununterbrochene Verfügbarkeit der Website und App.</p>
+
+
+				<h4>8. Anwendbares Recht</h4>
+
+
+				<p>Es gilt das Recht der Bundesrepublik Deutschland unter Ausschluss des UN-Kaufrechts, wenn</p>
+
+				<p>Du Deinen gewöhnlichen Aufenthalt in Deutschland hast, oder</p>
+
+				<p>Dein gewöhnlicher Aufenthalt in einem Staat ist, der nicht Mitglied der Europäischen Union ist.</p>
+
+				<p>Für den Fall, dass Du Deinen gewöhnlichen Aufenthalt in einem Mitgliedsstaat der Europäischen Union
+					hast, gilt ebenfalls die Anwendbarkeit des deutschen Rechts, wobei zwingende Bestimmungen des
+					Staates in dem Du Deinen gewöhnlichen Aufenthalt hast, unberührt bleiben.</p>
+				<br>
+				<br>
+
+
+				<p>Stand: 14. Januar 2019</p>
+
+			</div>
+		</div>
+	</div>
 </div>
 <footer id="footer" class="footer">
 	<div class="container">
@@ -155,8 +345,9 @@
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
 								<li><a target="_blank" href="https://www.bitwala.com/privacy-policy/"
-											 class="foot-link">Privacy Policy</a></li>
-								<li><a target="_blank" href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a>
+									   class="foot-link">Privacy Policy</a></li>
+								<li><a target="_blank" href="https://www.bitwala.com/imprint/"
+									   class="foot-link">Imprint</a>
 								</li>
 							</ul>
 						</div>
@@ -173,7 +364,7 @@
 								<li><a target="_blank" href="mailto: invest@bitwala.com" class="foot-link">Contact
 									Us</a></li>
 								<li><a target="_blank" href="https://www.bitwala.com/news"
-											 class="foot-link">Blog</a></li>
+									   class="foot-link">Blog</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
@@ -182,14 +373,15 @@
 								<li><a target="_blank" href="https://t.me/BitwalaTGE" class="foot-link">Telegram</a>
 								</li>
 								<li><a target="_blank" href="https://twitter.com/bitwala"
-											 class="foot-link">Twitter</a></li>
+									   class="foot-link">Twitter</a></li>
 								<li><a target="_blank" href="https://bitcointalk.org/index.php?topic=944782.0"
-											 class="foot-link">Bitcoin Talk</a></li>
-								<li><a target="_blank" href="https://www.reddit.com/r/Bitwala/" class="foot-link">Reddit</a>
+									   class="foot-link">Bitcoin Talk</a></li>
+								<li><a target="_blank" href="https://www.reddit.com/r/Bitwala/"
+									   class="foot-link">Reddit</a>
 								</li>
 								<li><a target="_blank"
-											 href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ"
-											 class="foot-link">Youtube</a></li>
+									   href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ"
+									   class="foot-link">Youtube</a></li>
 							</ul>
 						</div>
 					</div>
@@ -219,7 +411,7 @@
 	</div>
 </footer>
 <div class="modal fade whitelist-modal" id="whitelistModal" tabindex="-1" role="dialog"
-		 aria-labelledby="whitelistModal" aria-hidden="true">
+	 aria-labelledby="whitelistModal" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -476,8 +668,8 @@
 	</div>
 </div>
 <div class="modal fade whitelist-modal whitelist-send" id="whitelistModalSend" tabindex="-1"
-		 role="dialog"
-		 aria-labelledby="whitelistModal" aria-hidden="true">
+	 role="dialog"
+	 aria-labelledby="whitelistModal" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -494,14 +686,14 @@
 					<div class="col">
 						<p class="inner-title">Join our community!</p>
 						<a class="telegram-button modal-secondary-btn" href="#"><i class="fa fa-paper-plane-o"
-																																			 aria-hidden="true"></i></i>
+																				   aria-hidden="true"></i></i>
 							1.254</a>
 					</div>
 					<div class="col">
 						<p class="inner-title">Get your free banking account!</p>
 						<a class="bitwala-button modal-secondary-btn" href="#"><img
-									src="images/bitwala-logo-blue.png"
-									alt="bitwala"></a>
+								src="images/bitwala-logo-blue.png"
+								alt="bitwala"></a>
 					</div>
 				</div>
 			</div>
