--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -230,7 +230,7 @@
 					record your IP address and the date of registration upon registering to ensure that no
 					third
 					party misuses your e-mail address and hereby logs in without your knowledge to receive the
-					newsletter. This data is stored and used for the sending of the newsletter.
+					newsletter. This data is stored and used for the sending of the newsletter. <br>
 					After registering, you will receive an e-mail to confirm your affiliation to the
 					newsletter
 					e-mail list. Unless you confirm your registration for our newsletter within 24 hours, we
@@ -265,7 +265,7 @@
 					Principles, are permitted. Sendgrid has committed to upholding these principles through
 					self-certification with the US Department of Commerce. Further information on data
 					protection
-					at Sendgrid can be found at https://sendgrid.com/policies/tos/. <br>
+					at Sendgrid can be found at <a target="_blank" href="https://sendgrid.com/policies/tos/">https://sendgrid.com/policies/tos/</a>. <br>
 					You can revoke your consent or object to the storage of data, the e-mail address and their
 					use
 					for sending the newsletter at any time. The revocation or objection can be declared via a
@@ -279,8 +279,7 @@
 
 				<p>Our Website is hosted by a third party service provider based in the US. To protect your
 					privacy when transferring data outside the EEA we have concluded Standard Contractual
-					Clauses
-					(https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32010D0087) provided by the
+					Clauses <br> (<a target="_blank" href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32010D0087">https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32010D0087</a>) provided by the
 					EU
 					commission. Furthermore, our hosting service provider is contractually bound to our
 					instructions under a Data Processing Agreement. Additionally, this service provider is
@@ -392,10 +391,10 @@
 					generated
 					by the cookie and related to your use of the website (including your IP address) and the
 					processing of this data by Google by downloading the browser plug-in available under the
-					following link and install: http://tools.google.com/dlpage/gaoptout?hl=de
+					following link and install: <a target="_blank" href="http://tools.google.com/dlpage/gaoptout?hl=de">http://tools.google.com/dlpage/gaoptout?hl=de</a>
 					Google has committed itself to self-certification by the US Department of Commerce to
 					adhere
-					to the framework of the [EU-US Privacy Shield (https://www.privacyshield.gov).</p>
+					to the framework of the [EU-US Privacy Shield (<a target="_blank" href="https://www.privacyshield.gov">https://www.privacyshield.gov</a>).</p>
 
 
 				<h4>Further Transmission of data</h4>
@@ -466,7 +465,7 @@
 					using the above contact details. However, for your convenience we have implemented a
 					special
 					data privacy team at Bitwala which will handle and, where necessary, forward all requests,
-					which can be reached at: dataprotection@bitwala.com.</p>
+					which can be reached at: <a href="mailto:dataprotection@bitwala.com">dataprotection@bitwala.com</a>.</p>
 
 
 				<h4>Right to withdraw consent</h4>
@@ -481,7 +480,7 @@
 					would like to withdraw any consent given to us, please contact either of the Joint
 					Controllers
 					using their contact details provided above or direct your request to: <br>
-					dataprotection@bitwala.com. Alternatively you may use features provided within our
+					<a href="mailto:dataprotection@bitwala.com">dataprotection@bitwala.com</a>. Alternatively you may use features provided within our
 					applications to withdraw your consent.</p>
 
 
@@ -496,7 +495,7 @@
 				<p>You may at any time object to data processing for direct marketing purposes.
 					If you would like to object to any of our performance or marketing analytics purposes,
 					please
-					use one of the above listed opt-out methods or contact: dataprotection@bitwala.com.</p>
+					use one of the above listed opt-out methods or contact: <a href="mailto:dataprotection@bitwala.com">dataprotection@bitwala.com</a>.</p>
 
 
 			</div>
