--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -492,7 +492,7 @@
 					GDPR you have the right to object to the processing of your data according to ARt. 21
 					GDRP.</p>
 
-				<p>You may at any time object to data processing for direct marketing purposes.
+				<p>You may at any time object to data processing for direct marketing purposes.<br>
 					If you would like to object to any of our performance or marketing analytics purposes,
 					please
 					use one of the above listed opt-out methods or contact: <a href="mailto:dataprotection@bitwala.com">dataprotection@bitwala.com</a>.</p>
