--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -815,7 +815,7 @@
 							<div class="check-wrap">
 								<input type="checkbox" id="termsAndCond">
 								<label class="form-check-label" for="termsAndCond">I have read and accepted the
-									<a href="#">Terms &amp; Conditions</a></label>
+									<a href="terms-and-conditions.html">Terms &amp; Conditions</a></label>
 							</div>
 							<div class="check-wrap">
 								<input type="checkbox" id="addToNews">
