--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -344,10 +344,9 @@
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
-								<li><a target="_blank" href="https://www.bitwala.com/privacy-policy/"
-									   class="foot-link">Privacy Policy</a></li>
-								<li><a target="_blank" href="https://www.bitwala.com/imprint/"
-									   class="foot-link">Imprint</a>
+								<li><a target="_blank" href="privacy-policy.html"
+											 class="foot-link">Privacy Policy</a></li>
+								<li><a target="_blank" href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a>
 								</li>
 							</ul>
 						</div>
@@ -364,7 +363,7 @@
 								<li><a target="_blank" href="mailto: invest@bitwala.com" class="foot-link">Contact
 									Us</a></li>
 								<li><a target="_blank" href="https://www.bitwala.com/news"
-									   class="foot-link">Blog</a></li>
+											 class="foot-link">Blog</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
@@ -373,15 +372,14 @@
 								<li><a target="_blank" href="https://t.me/BitwalaTGE" class="foot-link">Telegram</a>
 								</li>
 								<li><a target="_blank" href="https://twitter.com/bitwala"
-									   class="foot-link">Twitter</a></li>
+											 class="foot-link">Twitter</a></li>
 								<li><a target="_blank" href="https://bitcointalk.org/index.php?topic=944782.0"
-									   class="foot-link">Bitcoin Talk</a></li>
-								<li><a target="_blank" href="https://www.reddit.com/r/Bitwala/"
-									   class="foot-link">Reddit</a>
+											 class="foot-link">Bitcoin Talk</a></li>
+								<li><a target="_blank" href="https://www.reddit.com/r/Bitwala/" class="foot-link">Reddit</a>
 								</li>
 								<li><a target="_blank"
-									   href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ"
-									   class="foot-link">Youtube</a></li>
+											 href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ"
+											 class="foot-link">Youtube</a></li>
 							</ul>
 						</div>
 					</div>
