--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -126,18 +126,18 @@
 <header id="mainHeader" class="header">
 	<div class="container">
 		<div class="inner-wrap">
-			<a href="#" class="logo"><img src="images/logo.png" alt="Logo"></a>
+			<a href="/" class="logo"><img src="images/logo.png" alt="Logo"></a>
 			<div class="main-navigation">
 				<div class="main-navigation-container">
 					<div class="inner-wrap">
 						<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
 									class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
 						<ul class="main-nav">
-							<li><a href="#stoSection" class="main-nav-link">STO</a></li>
-							<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
-							<li><a href="#teamSection" class="main-nav-link">Team</a></li>
-							<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
-							<li><a href="#footer" class="main-nav-link">Social</a></li>
+							<li><a href="/#stoSection" class="main-nav-link">STO</a></li>
+							<li><a href="/#roadmapSection" class="main-nav-link">Roadmap</a></li>
+							<li><a href="/#teamSection" class="main-nav-link">Team</a></li>
+							<li><a href="/#faqSection" class="main-nav-link">FAQ</a></li>
+							<li><a href="/#footer" class="main-nav-link">Social</a></li>
 						</ul>
 						<a href="#" class="btn primary-theme-btn show-whitelist-modal" data-toggle="modal"
 							 data-target="#whitelistModal">Get
