--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
 <header id="mainHeader" class="header">
 	<div class="container">
 		<div class="inner-wrap">
-			<a href="#" class="logo"><img src="images/logo.png" alt="Logo"></a>
+			<a href="/" class="logo"><img src="images/logo.png" alt="Logo"></a>
 			<div class="main-navigation">
 				<div class="main-navigation-container">
 					<div class="inner-wrap">
