--- a/src/index.html
+++ b/src/index.html
@@ -402,14 +402,14 @@
 				<div class="row no-gutters ts-items">
 					<div class="col-sm-6 col-6">
 						<div class="ts-item">
-							<img class="ts-icon" src="images/icon-price-tag.png" alt="price" width="57">
+							<img class="ts-icon" src="images/icon-price-tag.png" alt="price">
 							<h5 class="ts-item-title">1 BWL = 1 EUR</h5>
 							<div class="ts-item-descr">Token nominal price</div>
 						</div>
 					</div>
 					<div class="col-sm-6 col-6">
 						<div class="ts-item">
-							<img class="ts-icon" src="images/icon-currency.png" alt="currency" width="88">
+							<img class="ts-icon" src="images/icon-currency.png" alt="currency">
 							<h5 class="ts-item-title">EUR, BTC, ETH</h5>
 							<div class="ts-item-descr">Accepted currencies</div>
 						</div>
@@ -417,14 +417,14 @@
 					<div class="w-100"></div>
 					<div class="col-sm-6 col-6">
 						<div class="ts-item">
-							<img class="ts-icon fix-width" src="images/icon-speed.png" alt="speed" width="97">
+							<img class="ts-icon" src="images/icon-speed.png" alt="speed">
 							<h5 class="ts-item-title">15m / 75m tokens</h5>
 							<div class="ts-item-descr">Soft-cap / Hard-cap</div>
 						</div>
 					</div>
 					<div class="col-sm-6 col-6">
 						<div class="ts-item">
-							<img class="ts-icon" src="images/icon-pie-chart.png" alt="pie chart" width="75">
+							<img class="ts-icon" src="images/icon-pie-chart.png" alt="pie chart">
 							<h5 class="ts-item-title">10%</h5>
 							<div class="ts-item-descr">of all tokens generated for current and future Team &
 								Ambassadors
