--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -64,7 +64,7 @@
 				<span aria-hidden="true">&times;</span>
 			</button>
 			<div class="inner-wrap">
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt="logo"></a>
 				<h3 class="modal-title">Have you already registered to get
 					whitelisted?</h3>
 				<div class="btn-wrap">
@@ -91,7 +91,7 @@
 				<span aria-hidden="true">&times;</span>
 			</button>
 			<div class="inner-wrap">
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt="logo"></a>
 				<h3 class="modal-title">Your document is ready</h3>
 				<div class="btn-wrap">
 					<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
@@ -111,7 +111,7 @@
 				<span aria-hidden="true">&times;</span>
 			</button>
 			<div class="inner-wrap">
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt="logo"></a>
 				<h3 class="modal-title">Please check your email, we will contact you shortly with more
 					information.</h3>
 				<h3 class="modal-title">Your document is ready</h3>
@@ -126,12 +126,12 @@
 <header id="mainHeader" class="header">
 	<div class="container">
 		<div class="inner-wrap">
-			<a href="/" class="logo"><img src="images/logo.png" alt="Logo"></a>
+			<a href="/" class="logo"><img src="/images/logo.png" alt="Logo"></a>
 			<div class="main-navigation">
 				<div class="main-navigation-container">
 					<div class="inner-wrap">
 						<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
-									class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
+									class="icon"><img src="/images/bank-live-icon.png" alt=""></span></a>
 						<ul class="main-nav">
 							<li><a href="/#stoSection" class="main-nav-link">STO</a></li>
 							<li><a href="/#roadmapSection" class="main-nav-link">Roadmap</a></li>
@@ -552,7 +552,7 @@
 					</div>
 				</div>
 				<div class="col-sm-4 col-12 footer-logo">
-					<a href="#" class="logo"><img src="images/logo.png" alt="png"></a>
+					<a href="#" class="logo"><img src="/images/logo.png" alt="png"></a>
 				</div>
 			</div>
 		</div>
@@ -583,7 +583,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt="logo"></a>
 				<h3 id="modal-title" class="modal-title">Reserve your spot for the Bitwala STO!</h3>
 			</div>
 			<div class="modal-body">
@@ -841,7 +841,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt="logo"></a>
 			</div>
 			<div class="modal-body">
 				<h3 id="modal-title-send" class="modal-title">Please check your email, we will contact you
@@ -857,7 +857,7 @@
 					<div class="col">
 						<p class="inner-title">Get your free banking account!</p>
 						<a class="bitwala-button modal-secondary-btn" href="#"><img
-									src="images/bitwala-logo-blue.png"
+									src="/images/bitwala-logo-blue.png"
 									alt="bitwala"></a>
 					</div>
 				</div>
