--- a/src/index.html
+++ b/src/index.html
@@ -778,8 +778,8 @@
 		</div>
 		<div class="partners">
 			<div class="container">
-				<div class="row no-gutters">
-					<div class="col-md-4 col-6 partner-item b-bottom b-right">
+				<div class="row no-gutters justify-content-md-center">
+					<div class="col partner-item b-right">
 						<a href="https://www.alstin.de/de" class="partner-link">
 							<img class="def-img" src="/images/logo-alst-grey.png" alt="alst"
 									 width="245">
@@ -787,7 +787,7 @@
 									 width="245">
 						</a>
 					</div>
-					<div class="col-md-4 col-6 partner-item b-bottom b-right crop-corners">
+					<div class="col partner-item b-right">
 						<a href="https://dcg.co/" class="partner-link">
 							<img class="def-img" src="/images/logo-dcg-grey.png" alt="dcg"
 									 width="130">
@@ -795,7 +795,7 @@
 									 width="130">
 						</a>
 					</div>
-					<div class="col-md-4 col-6 partner-item b-bottom">
+					<div class="col partner-item b-right">
 						<a href="https://coparion.vc/en" class="partner-link">
 							<img class="def-img" src="/images/logo-coparion-grey.png"
 									 alt="coparion" width="190">
@@ -803,7 +803,7 @@
 									 alt="coparion" width="190">
 						</a>
 					</div>
-					<div class="col-md-4 col-6 partner-item b-right">
+					<div class="col partner-item b-right">
 						<a href="https://earlybird.com/" class="partner-link">
 							<img class="def-img" src="/images/logo-earlybird-grey.png"
 									 alt="earlybird" width="200">
@@ -811,7 +811,7 @@
 									 alt="earlybird" width="200">
 						</a>
 					</div>
-					<div class="col-md-4 col-6 partner-item b-right">
+					<div class="col partner-item">
 						<a href="https://high-tech-gruenderfonds.de/en/" class="partner-link">
 							<img class="def-img" src="/images/logo-htgf-grey.png" alt="htgf" width="250">
 							<img class="hov-img" src="/images/logo-htgf-hover.png" alt="htgf" width="250">
