--- a/src/index.html
+++ b/src/index.html
@@ -326,7 +326,7 @@
 						<img class="token-graphic-icon" src="/images/icon-coin.png" alt="coin">
 						<div class="separator"></div>
 						<div class="descr">
-							Tokens provide downround anti-dillution protection
+							Tokens provide downround anti-dilution protection
 						</div>
 					</div>
 					<div class="token-graphic-item right fourth">
