--- a/src/index.html
+++ b/src/index.html
@@ -1267,9 +1267,312 @@
 				<h3 id="modal-title" class="modal-title">Reserve your spot for the Bitwala STO</h3>
 			</div>
 			<div class="modal-body">
-				<script type="text/javascript" src="//sgwidget.leaderapps.co/js/sg-widget.js"></script><style>.sendgrid-subscription-widget input { padding: .5em .5em .55em; font-size: .8em; font-family: sans-serif } .sendgrid-subscription-widget #sg_signup_first_name, .sendgrid-subscription-widget #sg_signup_last_name { margin-right: .5em } .sendgrid-subscription-widget #sg-submit-btn { display: inline-block; color: #444; border: 1px solid #ccc; background: #ddd; box-shadow: 0 0 5px -1px rgba(0, 0, 0, .2); cursor: pointer; vertical-align: middle; max-width: 100px; padding: .5em; margin: 0 .4em; text-align: center; font-size: .9em; font-family: sans-serif } .sendgrid-subscription-widget #sg-submit-btn:active { color: #8e8b8b; box-shadow: 0 0 5px -1px rgba(0, 0, 0, .6) } .sendgrid-subscription-widget .response { display: none; font-family: sans-serif; font-size: .8em } .sendgrid-subscription-widget .success { color: green } .sendgrid-subscription-widget .error, .sendgrid-subscription-widget .sg-consent-text a { color: #3097d1 } .sendgrid-subscription-widget .sg-consent-text { font-size: .9em } .sendgrid-subscription-widget .sg-consent-text label { font-weight: 400 } .sendgrid-subscription-widget .required { outline: 1px solid #f00; } .sendgrid-subscription-widget .sg_custom { margin-left: 5px; } .sendgrid-subscription-widget .checkbox_label { padding-left: 3px; } </style><div id="sendgrid-subscription-widget" class="sendgrid-subscription-widget" data-emailerror="Please enter a valid email address" data-checkboxerror="Please tick the box to accept our conditions"><form id="sg-widget" data-token="66f9090f486f02fd8fa01faa801030b0" onsubmit="return false;"><div class="sg-response" id="sg-response"></div><input id="sg_signup_first_name" type="text" name="sg_signup_first_name" placeholder="First Name" required><input id="sg_signup_last_name" type="text" name="sg_signup_last_name" placeholder="Last Name" required><input id="sg_email" type="email" name="sg_email" placeholder="you@example.com" required> <input type="submit" id="sg-submit-btn" value="Subscribe"><div class="sg-consent-text"><label><input type="checkbox" id="sg_consent_checkbox" name="sg_consent_checkbox"> I understand and consent to the following</label> <a target="_blank" href="">Privacy Notice</a></div></form></div>
-			</div>
+				<h4 id="modal-sub-title" class="modal-sub-title">The reservation is non-binding, we will
+					contact you with further information, including the link to the identification process, as
+					soon as available.</h4>
+				<div class="token-block">
+					<p class="sub-block-text">I want to reserve</p>
+					<div class="token-buttons" id="tokenButtons">
+						<div class="token-button active less" data-investor-type="public">&lt;€100k</div>
+						<div class="token-button more" data-investor-type="private">≥€100k</div>
+					</div>
+					<div class="sub-block-text text-right">worth of tokens</div>
+					<h4 class="modal-sub-title">The private sale is reserved for minimum investments of
+						€100k.</h4>
+				</div>
+				<script type="text/javascript" src="//sgwidget.leaderapps.co/js/sg-widget.js"></script>
+				<style>
+					.sendgrid-subscription-widget input {
+						padding: .5em .5em .55em;
+						font-size: .8em;
+						font-family: sans-serif
+					}
 
+					.sendgrid-subscription-widget #sg_signup_first_name,
+					.sendgrid-subscription-widget #sg_signup_last_name {
+						margin-right: .5em
+					}
+
+					.sendgrid-subscription-widget #sg-submit-btn {
+						display: inline-block;
+						color: #444;
+						border: 1px solid #ccc;
+						background: #ddd;
+						box-shadow: 0 0 5px -1px rgba(0, 0, 0, .2);
+						cursor: pointer;
+						vertical-align: middle;
+						max-width: 100px;
+						padding: .5em;
+						margin: 0 .4em;
+						text-align: center;
+						font-size: .9em;
+						font-family: sans-serif
+					}
+
+					.sendgrid-subscription-widget #sg-submit-btn:active {
+						color: #8e8b8b;
+						box-shadow: 0 0 5px -1px rgba(0, 0, 0, .6)
+					}
+
+					.sendgrid-subscription-widget .response {
+						display: none;
+						font-family: sans-serif;
+						font-size: .8em
+					}
+
+					.sendgrid-subscription-widget .success {
+						color: green
+					}
+
+					.sendgrid-subscription-widget .error, .sendgrid-subscription-widget .sg-consent-text a {
+						color: #3097d1
+					}
+
+					.sendgrid-subscription-widget .sg-consent-text {
+						font-size: .9em
+					}
+
+					.sendgrid-subscription-widget .sg-consent-text label {
+						font-weight: 400
+					}
+
+					.sendgrid-subscription-widget .required {
+						outline: 1px solid #f00;
+					}
+
+					.sendgrid-subscription-widget .sg_custom {
+						margin-left: 5px;
+					}
+
+					.sendgrid-subscription-widget .checkbox_label {
+						padding-left: 3px;
+					}
+				</style>
+				<div id="sendgrid-subscription-widget" class="sendgrid-subscription-widget"
+						 data-emailerror="Please enter a valid email address"
+						 data-checkboxerror="Please tick the box to accept our conditions"
+						 data-customfieldserror="This field is required">
+					<form id="sg-widget" data-token="280834e6391e7e046ea70e6935db4ee8"
+								onsubmit="return false;">
+						<div class="sg-response" id="sg-response"></div>
+						<input id="sg_signup_first_name" type="text" name="sg_signup_first_name"
+									 placeholder="First Name" required><input id="sg_signup_last_name" type="text"
+																														name="sg_signup_last_name"
+																														placeholder="Last Name" required><input
+								id="sg_email" type="email" name="sg_email" placeholder="you@example.com" required>
+
+						<select name="nationality" id="nationality" data-select2-id="nationality" tabindex="-1" class="select2-hidden-accessible" aria-hidden="true">
+							<option value="" data-select2-id="2">Nationality</option>
+							<option value="afghan">Afghan</option>
+							<option value="albanian">Albanian</option>
+							<option value="algerian">Algerian</option>
+							<option value="american">American (USA)</option>
+							<option value="andorran">Andorran</option>
+							<option value="angolan">Angolan</option>
+							<option value="antiguans">Antiguans</option>
+							<option value="argentinean">Argentinean</option>
+							<option value="armenian">Armenian</option>
+							<option value="australian">Australian</option>
+							<option value="austrian">Austrian</option>
+							<option value="azerbaijani">Azerbaijani</option>
+							<option value="bahamian">Bahamian</option>
+							<option value="bahraini">Bahraini</option>
+							<option value="bangladeshi">Bangladeshi</option>
+							<option value="barbadian">Barbadian</option>
+							<option value="barbudans">Barbudans</option>
+							<option value="batswana">Batswana</option>
+							<option value="belarusian">Belarusian</option>
+							<option value="belgian">Belgian</option>
+							<option value="belizean">Belizean</option>
+							<option value="beninese">Beninese</option>
+							<option value="bhutanese">Bhutanese</option>
+							<option value="bolivian">Bolivian</option>
+							<option value="bosnian">Bosnian</option>
+							<option value="brazilian">Brazilian</option>
+							<option value="british">British</option>
+							<option value="bruneian">Bruneian</option>
+							<option value="bulgarian">Bulgarian</option>
+							<option value="burkinabe">Burkinabe</option>
+							<option value="burmese">Burmese</option>
+							<option value="burundian">Burundian</option>
+							<option value="cambodian">Cambodian</option>
+							<option value="cameroonian">Cameroonian</option>
+							<option value="canadian">Canadian</option>
+							<option value="cape_verdean">Cape Verdean</option>
+							<option value="central_african">Central African</option>
+							<option value="chadian">Chadian</option>
+							<option value="chilean">Chilean</option>
+							<option value="chinese">Chinese</option>
+							<option value="colombian">Colombian</option>
+							<option value="comoran">Comoran</option>
+							<option value="congolese">Congolese</option>
+							<option value="costa_rican">Costa Rican</option>
+							<option value="croatian">Croatian</option>
+							<option value="cuban">Cuban</option>
+							<option value="cypriot">Cypriot</option>
+							<option value="czech">Czech</option>
+							<option value="danish">Danish</option>
+							<option value="djibouti">Djibouti</option>
+							<option value="dominican">Dominican</option>
+							<option value="dutch">Dutch</option>
+							<option value="east_timorese">East Timorese</option>
+							<option value="ecuadorean">Ecuadorean</option>
+							<option value="egyptian">Egyptian</option>
+							<option value="emirian">Emirian</option>
+							<option value="equatorial_guinean">Equatorial Guinean</option>
+							<option value="eritrean">Eritrean</option>
+							<option value="estonian">Estonian</option>
+							<option value="ethiopian">Ethiopian</option>
+							<option value="fijian">Fijian</option>
+							<option value="filipino">Filipino</option>
+							<option value="finnish">Finnish</option>
+							<option value="french">French</option>
+							<option value="gabonese">Gabonese</option>
+							<option value="gambian">Gambian</option>
+							<option value="georgian">Georgian</option>
+							<option value="german">German</option>
+							<option value="ghanaian">Ghanaian</option>
+							<option value="greek">Greek</option>
+							<option value="grenadian">Grenadian</option>
+							<option value="guatemalan">Guatemalan</option>
+							<option value="guinea-bissauan">Guinea-Bissauan</option>
+							<option value="guinean">Guinean</option>
+							<option value="guyanese">Guyanese</option>
+							<option value="haitian">Haitian</option>
+							<option value="herzegovinian">Herzegovinian</option>
+							<option value="honduran">Honduran</option>
+							<option value="hong_kongese">Hong Kongese</option>
+							<option value="hungarian">Hungarian</option>
+							<option value="icelander">Icelander</option>
+							<option value="indian">Indian</option>
+							<option value="indonesian">Indonesian</option>
+							<option value="iranian">Iranian</option>
+							<option value="iraqi">Iraqi</option>
+							<option value="irish">Irish</option>
+							<option value="israeli">Israeli</option>
+							<option value="italian">Italian</option>
+							<option value="ivorian">Ivorian</option>
+							<option value="jamaican">Jamaican</option>
+							<option value="japanese">Japanese</option>
+							<option value="jordanian">Jordanian</option>
+							<option value="kazakhstani">Kazakhstani</option>
+							<option value="kenyan">Kenyan</option>
+							<option value="kittian_and_nevisian">Kittian and Nevisian</option>
+							<option value="kuwaiti">Kuwaiti</option>
+							<option value="kyrgyz">Kyrgyz</option>
+							<option value="laotian">Laotian</option>
+							<option value="latvian">Latvian</option>
+							<option value="lebanese">Lebanese</option>
+							<option value="liberian">Liberian</option>
+							<option value="libyan">Libyan</option>
+							<option value="liechtensteiner">Liechtensteiner</option>
+							<option value="lithuanian">Lithuanian</option>
+							<option value="luxembourger">Luxembourger</option>
+							<option value="macanese">Macanese</option>
+							<option value="macedonian">Macedonian</option>
+							<option value="malagasy">Malagasy</option>
+							<option value="malawian">Malawian</option>
+							<option value="malaysian">Malaysian</option>
+							<option value="maldivan">Maldivan</option>
+							<option value="malian">Malian</option>
+							<option value="maltese">Maltese</option>
+							<option value="marshallese">Marshallese</option>
+							<option value="mauritanian">Mauritanian</option>
+							<option value="mauritian">Mauritian</option>
+							<option value="mexican">Mexican</option>
+							<option value="micronesian">Micronesian</option>
+							<option value="moldovan">Moldovan</option>
+							<option value="monacan">Monacan</option>
+							<option value="mongolian">Mongolian</option>
+							<option value="moroccan">Moroccan</option>
+							<option value="mosotho">Mosotho</option>
+							<option value="motswana">Motswana</option>
+							<option value="mozambican">Mozambican</option>
+							<option value="namibian">Namibian</option>
+							<option value="nauruan">Nauruan</option>
+							<option value="nepalese">Nepalese</option>
+							<option value="new_zealander">New Zealander</option>
+							<option value="ni-vanuatu">Ni-Vanuatu</option>
+							<option value="nicaraguan">Nicaraguan</option>
+							<option value="nigerien">Nigerien</option>
+							<option value="north_korean">North Korean</option>
+							<option value="northern_irish">Northern Irish</option>
+							<option value="norwegian">Norwegian</option>
+							<option value="omani">Omani</option>
+							<option value="pakistani">Pakistani</option>
+							<option value="palauan">Palauan</option>
+							<option value="panamanian">Panamanian</option>
+							<option value="papua_new_guinean">Papua New Guinean</option>
+							<option value="paraguayan">Paraguayan</option>
+							<option value="peruvian">Peruvian</option>
+							<option value="polish">Polish</option>
+							<option value="portuguese">Portuguese</option>
+							<option value="qatari">Qatari</option>
+							<option value="romanian">Romanian</option>
+							<option value="russian">Russian</option>
+							<option value="rwandan">Rwandan</option>
+							<option value="saint_lucian">Saint Lucian</option>
+							<option value="salvadoran">Salvadoran</option>
+							<option value="samoan">Samoan</option>
+							<option value="san_marinese">San Marinese</option>
+							<option value="sao_tomean">Sao Tomean</option>
+							<option value="saudi">Saudi</option>
+							<option value="scottish">Scottish</option>
+							<option value="senegalese">Senegalese</option>
+							<option value="serbian">Serbian</option>
+							<option value="seychellois">Seychellois</option>
+							<option value="sierra_leonean">Sierra Leonean</option>
+							<option value="singaporean">Singaporean</option>
+							<option value="slovakian">Slovakian</option>
+							<option value="slovenian">Slovenian</option>
+							<option value="solomon_islander">Solomon Islander</option>
+							<option value="somali">Somali</option>
+							<option value="south_african">South African</option>
+							<option value="south_korean">South Korean</option>
+							<option value="spanish">Spanish</option>
+							<option value="sri_lankan">Sri Lankan</option>
+							<option value="sudanese">Sudanese</option>
+							<option value="surinamer">Surinamer</option>
+							<option value="swazi">Swazi</option>
+							<option value="swedish">Swedish</option>
+							<option value="swiss">Swiss</option>
+							<option value="syrian">Syrian</option>
+							<option value="taiwanese">Taiwanese</option>
+							<option value="tajik">Tajik</option>
+							<option value="tanzanian">Tanzanian</option>
+							<option value="thai">Thai</option>
+							<option value="togolese">Togolese</option>
+							<option value="tongan">Tongan</option>
+							<option value="trinidadian_or_tobagonian">Trinidadian or Tobagonian</option>
+							<option value="tunisian">Tunisian</option>
+							<option value="turkish">Turkish</option>
+							<option value="tuvaluan">Tuvaluan</option>
+							<option value="ugandan">Ugandan</option>
+							<option value="ukrainian">Ukrainian</option>
+							<option value="uruguayan">Uruguayan</option>
+							<option value="uzbekistani">Uzbekistani</option>
+							<option value="venezuelan">Venezuelan</option>
+							<option value="vietnamese">Vietnamese</option>
+							<option value="welsh">Welsh</option>
+							<option value="yemenite">Yemenite</option>
+							<option value="zambian">Zambian</option>
+							<option value="zimbabwean">Zimbabwean</option>
+						</select>
+
+						<input type="text" name="investor_type" id="sg_custom_0" class="sg_custom"
+									 required><input type="text" name="nationality" id="sg_custom_1" class="sg_custom"
+																	 required><input type="text" name="newsletter" id="sg_custom_2"
+																									 class="sg_custom" required> <input type="submit"
+																																											id="sg-submit-btn"
+																																											value="Subscribe">
+						<div class="sg-consent-text"><label><input type="checkbox" id="sg_consent_checkbox"
+																											 name="sg_consent_checkbox"> I have read and
+							accepted the </label> <a target="_blank"
+																			 href="https://www.bitwalatoken.com/terms-and-conditions.html">Terms
+							& Conditions</a></div>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -1308,6 +1611,5 @@
 </div>
 <script type="text/javascript" src="js/libs.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 </body>
 </html>
