fix arrow below previous element

--- a/src/index.html
+++ b/src/index.html
@@ -553,69 +553,69 @@
 									</div>
 								</div>
 							</div>
-							<!--							<div class="carousel-item">
-															<div class="row no-gutters">
-																<div class="col-12 col-md-5">
-																	<div class="inner-img">
-																		<img class="bg-img" src="/images/slider-img-1.png" alt="image">
-																	</div>
-																</div>
-																<div class="col-12 col-md-7">
-																	<div class="review">
-																		<div class="review-text">
-																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-																				tempor
-																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-																				et
-																				dolore magna aliqua.”</p>
-																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-																		</div>
-																	</div>
-																</div>
+							<!--				<div class="carousel-item">
+												<div class="row no-gutters">
+													<div class="col-12 col-md-5">
+														<div class="inner-img">
+															<img class="bg-img" src="/images/pic-coparion.jpg" alt="coparion">
+														</div>
+													</div>
+													<div class="col-12 col-md-7">
+														<div class="review">
+															<div class="review-text">
+																<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																	tempor
+																	incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																	et
+																	dolore magna aliqua.”</p>
+																<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 															</div>
 														</div>
-														<div class="carousel-item">
-															<div class="row no-gutters">
-																<div class="col-12 col-md-5">
-																	<div class="inner-img">
-																		<img class="bg-img" src="/images/slider-img-1.png" alt="image">
-																	</div>
-																</div>
-																<div class="col-12 col-md-7">
-																	<div class="review">
-																		<div class="review-text">
-																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-																				tempor
-																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-																				et
-																				dolore magna aliqua.”</p>
-																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-																		</div>
-																	</div>
-																</div>
+													</div>
+												</div>
+											</div>
+											<div class="carousel-item">
+												<div class="row no-gutters">
+													<div class="col-12 col-md-5">
+														<div class="inner-img">
+															<img class="bg-img" src="/images/pic-htgf.jpg" alt="htgf">
+														</div>
+													</div>
+													<div class="col-12 col-md-7">
+														<div class="review">
+															<div class="review-text">
+																<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																	tempor
+																	incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																	et
+																	dolore magna aliqua.”</p>
+																<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 															</div>
 														</div>
-														<div class="carousel-item">
-															<div class="row no-gutters">
-																<div class="col-12 col-md-5">
-																	<div class="inner-img">
-																		<img class="bg-img" src="/images/slider-img-1.png" alt="image">
-																	</div>
-																</div>
-																<div class="col-12 col-md-7">
-																	<div class="review">
-																		<div class="review-text">
-																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-																				tempor
-																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-																				et
-																				dolore magna aliqua.”</p>
-																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-																		</div>
-																	</div>
-																</div>
+													</div>
+												</div>
+											</div>
+											<div class="carousel-item">
+												<div class="row no-gutters">
+													<div class="col-12 col-md-5">
+														<div class="inner-img">
+															<img class="bg-img" src="/images/pic-earlybird.jpg" alt="earlybird">
+														</div>
+													</div>
+													<div class="col-12 col-md-7">
+														<div class="review">
+															<div class="review-text">
+																<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																	tempor
+																	incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																	et
+																	dolore magna aliqua.”</p>
+																<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 															</div>
-														</div>-->
+														</div>
+													</div>
+												</div>
+											</div>-->
 						</div>
 						<a class="carousel-control carousel-control-prev" href="#carouselExampleIndicators"
 							 role="button" data-slide="prev">
@@ -641,24 +641,24 @@
 							<img class="default-img" src="/images/logo-brickblock-grey.png" alt="brickblock"
 							>
 						</li>
-						<!--			<li data-target="#carouselExampleIndicators" data-slide-to="2">
-										<img class="active-img" src="/images/logo-solaris-bank-blue.png"
-												 alt="bitcoin-foundation" width="170">
-										<img class="default-img" src="/images/logo-solaris-bank-grey.png"
-												 alt="bitcoin-foundation" width="170">
-									</li>
-									<li data-target="#carouselExampleIndicators" data-slide-to="3">
-										<img class="active-img" src="/images/logo-cointelegraph-blue.png"
-												 alt="bitcoin-foundation" width="130">
-										<img class="default-img" src="/images/logo-cointelegraph-grey.png"
-												 alt="bitcoin-foundation" width="130">
-									</li>
-									<li data-target="#carouselExampleIndicators" data-slide-to="4">
-										<img class="active-img" src="/images/logo-coparion-blue.png" alt="bitcoin-foundation"
-												 width="130">
-										<img class="default-img" src="/images/logo-coparion-grey.png" alt="bitcoin-foundation"
-												 width="130">
-									</li>-->
+<!--						<li data-target="#carouselExampleIndicators" data-slide-to="2">
+							<img class="active-img" src="/images/logo-coparion-blue.png"
+									 alt="bitcoin-foundation" width="170">
+							<img class="default-img" src="/images/logo-coparion-grey.png"
+									 alt="bitcoin-foundation" width="170">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="3">
+							<img class="active-img" src="/images/logo-htgf-hover.png"
+									 alt="htgf" width="130">
+							<img class="default-img" src="/images/logo-htgf-grey.png"
+									 alt="htgf" width="130">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="4">
+							<img class="active-img" src="/images/logo-earlybird-hover.png" alt="earlybird"
+									 width="130">
+							<img class="default-img" src="/images/logo-earlybird-grey.png" alt="earlybird"
+									 width="130">
+						</li>-->
 					</ol>
 				</div>
 			</div>
